fixed form spacing

--- a/css/hdf_page.css
+++ b/css/hdf_page.css
@@ -246,16 +246,16 @@ p {
 .main-container {
   margin: 40px;
   padding: 0px;
-  width: 80vw;
+  width: 90vw;
   flex-shrink: 0;
   border-radius: 10px;
-  border: 5px solid #000;
+  border: 2px solid #000;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .top-container {
   padding: 15px;
-  border-radius: 4px 4px 0px 0px;
+  border-radius: 8px 8px 0px 0px;
   background: #810000;
   border: 5px solid #810000;
 }
@@ -263,6 +263,7 @@ p {
 .bottom-container {
   display: flex;
   flex-direction: column;
+  border-top: 2px solid black
 }
 
 .questions {
@@ -383,6 +384,11 @@ p {
   .questions-R {
     padding: 0px 0px 30px 20px;
     width: 90%;
+  }
+
+  .main-container {
+    width: 95vw;
+    margin-top: 20px;
   }
 
   .button-container {
